# marufuda-csv-studio

./: .gitignore  README.md  index.html  marufuda_project.json  package-lock.json  package.json  tailwind.config.js  vite.config.ts
docs/: alym-output-proposal.md  label_yasan_list.md  ドコモ光5行用テンプレ.alym  丸札用_20mm×20mm【7行】.alym  丸札用_30mm×30mm【8行】.alym  筑紫ヶ丘　伝送.csv  筑紫ヶ丘　伝送.xlsx
docs/temp_20mm/document/: document.data
docs/temp_marufuda/document/: document.data
docs/temp_orig/document/: document.data
docs/temp_tool/document/: document.data
docs/test/: (伝送２_丸札ツール出力)丸札用_20mm×20mm【7行】.alym
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: alym_export.rs  csv_export.rs  lib.rs  main.rs
src/components/: ExportBar.tsx  LabelEditor.tsx  LayoutConfigPanel.tsx  OutputPreview.tsx  OverviewCanvas.tsx  SuggestionDropdown.tsx
src/lib/: char-limit.ts  csv-build.ts  delimiter.ts  label-utils.ts  preset-texts.ts  presets.ts  reverse.ts  size-presets.ts  store.ts  suggestions.ts  types.ts
