[package]
name = "marufuda-csv-studio"
version = "0.1.0"
description = "丸札CSVスタジオ"
authors = ["you"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "marufuda_csv_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2", features = [] }

[dependencies]
tauri = { version = "2.2", features = [] }
tauri-plugin-dialog = "2.2"
tauri-plugin-fs = "2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
encoding_rs = "0.8"
